add pump actuator mqtt topic

--- a/src/mqtt-rest-adapter/config.ini
+++ b/src/mqtt-rest-adapter/config.ini
@@ -11,6 +11,7 @@ MOIST_TOPIC = m
 TEMP_TOPIC = t
 WATER_TOPIC = w
 VOLTAGE_TOPIC = v
+PUMP_TOPIC = p
 
 [API]
 BASE_URI = http://ec2-54-161-186-84.compute-1.amazonaws.com/Group-7-Smart-Farm/src/Web-Server/
@@ -18,3 +19,4 @@ MOIST_API = api/soil/add_reading.php
 TEMP_API = api/temperature/add_reading.php
 WATER_API = api/water/add_reading.php
 VOLTAGE_API = api/voltage/add_reading.php
+PUMP_API = api/pump/feedback.php
