route mqtt actuator events to water pump serial port

--- a/src/mqtt-rest-adapter/config.ini
+++ b/src/mqtt-rest-adapter/config.ini
@@ -6,12 +6,16 @@ SERVICE_ACCOUNT = user
 SERVICE_PASSWORD = password
 
 [TOPIC]
-TOPICS = MOIST,TEMP,WATER,VOLTAGE
+TOPICS = MOIST,TEMP,WATER,VOLTAGE,PUMP
 MOIST_TOPIC = m
 TEMP_TOPIC = t
 WATER_TOPIC = w
 VOLTAGE_TOPIC = v
 PUMP_TOPIC = p
+
+[TOPIC_HANDLING]
+REST = MOIST,TEMP,WATER,VOLTAGE
+ACTUATOR = PUMP
 
 [API]
 BASE_URI = http://ec2-54-161-186-84.compute-1.amazonaws.com/Group-7-Smart-Farm/src/Web-Server/
